@@ -196,25 +196,25 @@ let b = dict (catmap (\i/*0:*/ -> [i/*0:*/=>double i/*0:*/] {
   state 1: #0
 }) (11..20));
 {
-  rule #0: c = hdict$zipwith (=>) (catmap (\i -> (i,double i,str i):[]) (1..10)) (1..10)
+  rule #0: c = hdict$zipwith (=>) (catmap (\i -> [(i,double i,str i)]) (1..10)) (1..10)
   state 0: #0
 	<var> state 1
   state 1: #0
 }
-let c = hdict$zipwith (=>) (catmap (\i/*0:*/ -> (i/*0:*/,double i/*0:*/,str i/*0:*/):[] {
-  rule #0: i = (i,double i,str i):[]
+let c = hdict$zipwith (=>) (catmap (\i/*0:*/ -> [(i/*0:*/,double i/*0:*/,str i/*0:*/)] {
+  rule #0: i = [(i,double i,str i)]
   state 0: #0
 	<var> state 1
   state 1: #0
 }) (1..10)) (1..10);
 {
-  rule #0: d = hdict$zipwith (=>) (catmap (\i -> (i,double i,str i):[]) (11..20)) (11..20)
+  rule #0: d = hdict$zipwith (=>) (catmap (\i -> [(i,double i,str i)]) (11..20)) (11..20)
   state 0: #0
 	<var> state 1
   state 1: #0
 }
-let d = hdict$zipwith (=>) (catmap (\i/*0:*/ -> (i/*0:*/,double i/*0:*/,str i/*0:*/):[] {
-  rule #0: i = (i,double i,str i):[]
+let d = hdict$zipwith (=>) (catmap (\i/*0:*/ -> [(i/*0:*/,double i/*0:*/,str i/*0:*/)] {
+  rule #0: i = [(i,double i,str i)]
   state 0: #0
 	<var> state 1
   state 1: #0
@@ -238,8 +238,8 @@ e;
 Dict (bin "4" "4" 0 (bin "2" "2" 1 (bin "1" "1" (-1) nil (bin "10" "10" 0 nil nil)) (bin "3" "3" 0 nil nil)) (bin "6" "6" (-1) (bin "5" "5" 0 nil nil) (bin "8" "8" 0 (bin "7" "7" 0 nil nil) (bin "9" "9" 0 nil nil))))
 mkdict 1000 (1..10);
 Dict (bin 4 1000 (-1) (bin 2 1000 0 (bin 1 1000 0 nil nil) (bin 3 1000 0 nil nil)) (bin 8 1000 0 (bin 6 1000 0 (bin 5 1000 0 nil nil) (bin 7 1000 0 nil nil)) (bin 9 1000 (-1) nil (bin 10 1000 0 nil nil))))
-mkhdict 1000 (catmap (\i/*0:*/ -> (i/*0:*/,double i/*0:*/,str i/*0:*/):[] {
-  rule #0: i = (i,double i,str i):[]
+mkhdict 1000 (catmap (\i/*0:*/ -> [(i/*0:*/,double i/*0:*/,str i/*0:*/)] {
+  rule #0: i = [(i,double i,str i)]
   state 0: #0
 	<var> state 1
   state 1: #0
@@ -297,8 +297,8 @@ c!(50,50.0,"50");
 <stdin>:166.39-59: unhandled exception 'out_of_bounds' while evaluating 'c!(50,50.0,"50")'
 a!!(5..15);
 [5.0,6.0,7.0,8.0,9.0,10.0]
-c!!catmap (\i/*0:*/ -> (i/*0:*/,double i/*0:*/,str i/*0:*/):[] {
-  rule #0: i = (i,double i,str i):[]
+c!!catmap (\i/*0:*/ -> [(i/*0:*/,double i/*0:*/,str i/*0:*/)] {
+  rule #0: i = [(i,double i,str i)]
   state 0: #0
 	<var> state 1
   state 1: #0
@@ -311,7 +311,7 @@ members c;
 keys a;
 [1,2,3,4,5,6,7,8,9,10]
 keys c;
-(1,1.0,"1"):(2,2.0,"2"):(3,3.0,"3"):(4,4.0,"4"):(5,5.0,"5"):(6,6.0,"6"):(7,7.0,"7"):(8,8.0,"8"):(9,9.0,"9"):(10,10.0,"10"):[]
+[(1,1.0,"1"),(2,2.0,"2"),(3,3.0,"3"),(4,4.0,"4"),(5,5.0,"5"),(6,6.0,"6"),(7,7.0,"7"),(8,8.0,"8"),(9,9.0,"9"),(10,10.0,"10")]
 vals a;
 [1.0,2.0,3.0,4.0,5.0,6.0,7.0,8.0,9.0,10.0]
 vals c;
@@ -328,8 +328,8 @@ foldl delete a (1..10);
 Dict nil
 delete a 5000;
 Dict (bin 4 4.0 (-1) (bin 2 2.0 0 (bin 1 1.0 0 nil nil) (bin 3 3.0 0 nil nil)) (bin 8 8.0 0 (bin 6 6.0 0 (bin 5 5.0 0 nil nil) (bin 7 7.0 0 nil nil)) (bin 9 9.0 (-1) nil (bin 10 10.0 0 nil nil))))
-foldl delete c (catmap (\i/*0:*/ -> (i/*0:*/,double i/*0:*/,str i/*0:*/):[] {
-  rule #0: i = (i,double i,str i):[]
+foldl delete c (catmap (\i/*0:*/ -> [(i/*0:*/,double i/*0:*/,str i/*0:*/)] {
+  rule #0: i = [(i,double i,str i)]
   state 0: #0
 	<var> state 1
   state 1: #0
@@ -519,13 +519,13 @@ c!(20,30);
 <stdin>:292.24-36: unhandled exception 'out_of_bounds' while evaluating 'c!(20,30)'
 a!!(5..15);
 [6,7,8,9,10]
-c!!catmap (\i/*0:*/ -> catmap (\j/*0:*/ -> (i/*1:*/,j/*0:*/):[] {
-  rule #0: j = (i,j):[]
+c!!catmap (\i/*0:*/ -> catmap (\j/*0:*/ -> [(i/*1:*/,j/*0:*/)] {
+  rule #0: j = [(i,j)]
   state 0: #0
 	<var> state 1
   state 1: #0
 }) (3..15) {
-  rule #0: i = catmap (\j -> (i,j):[]) (3..15)
+  rule #0: i = catmap (\j -> [(i,j)]) (3..15)
   state 0: #0
 	<var> state 1
   state 1: #0
